--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                        </p>
                      <div>
                         <a href="./image/resume.pdf" download>                      
-                             <button class="btn btn-secondary">DOWNLODE CV</button></a>
+                             <button class="btn btn-secondary">DOWNLOAD CV</button></a>
 
                      </div>
                    </div>
