--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         </button>
         <ul>
             <li> <a href="#">Home</a></li>
-            <li> <a href="#">About</a></li>
-            <li> <a href="#">Project</a></li>
-            <li> <a href="#">Skills</a></li>
-            <li> <a href="#">Blog</a></li>
+            <li> <a href="#about">About</a></li>
+            <li> <a href="#project">Project</a></li>
+            <li> <a href="#skill">Skills</a></li>
+            <li> <a href="#blog">Blog</a></li>
         </ul>
     </div>
     <header>
@@ -74,11 +74,11 @@
    </header>
 
    <section class="about" id="about">
-       <div class="container flex items-center">
+       <div class="container flex items-center about-inner-wrap">
            <div class="flex-1">
                <img src="./image/man-2.png" class="about-me-img" alt="men">
            </div>
-           <div class="flex-1">
+           <div class="flex-1 right">
                <h1>About<span>Me</span></h1>
                <h3>Hello I'am Shubham Singh.</h3>
                <p> I have a Bechelor Degree in BCA from <b>Babu Banarasi Das University(LKO) </b><br>
@@ -245,13 +245,13 @@
    <section class="blog" id="blog">
        <div class="container">
            <h1 class="section-heading"><span>Our</span> Blog</h1>
-           <p>Lorem ipsum dolor sit amet.</p>
+           <p>Welcome Here...</p>
 
 
            <div class="card-wraper">
                <div class="card">
                    <div class="img-wraper">
-                       <img src="./image/article-ph-2.png" alt="img">
+                       <img src="./image/article-ph-2.png" class="img" alt="img">
                        <div class="card-content">
                            <a href="#"><h1>NPM</h1></a>
                            <span>may 12:12pm</span>
@@ -262,7 +262,7 @@
                </div>
                <div class="card">
                    <div class="img-wraper">
-                       <img src="./image/article-ph-2.png" alt="img">
+                       <img src="./image/article-ph-2.png" class="img" alt="img">
                        <div class="card-content">
                            <a href="#"><h1>React</h1></a>
                            <span>may 12:12pm</span>
@@ -274,7 +274,7 @@
 
                <div class="card">
                    <div class="img-wraper">
-                       <img src="./image/article-ph-2.png" alt="img">
+                       <img src="./image/article-ph-2.png" class="img" alt="img">
                        <div class="card-content">
                            <a href="#"><h1>MondoDB</h1></a>
                            <span>may 12:12pm</span>
@@ -329,10 +329,10 @@
    <footer>
       <h1> @SHUBHAM-SINGH</h1>
        <div class="footer-social">
-           <a href="https://github.com/singh123shubham"><img src="./image/GitHub.svg" alt="img"></a>
-           <a href="https://www.linkedin.com/in/shubham-singh-718b8514a/"><img src="./image/LinkedIn.svg" alt="img"></a>
-           <a href="https://www.instagram.com/singhshubhamgkp98/?hl=en"><img src="./image/Instagram.svg" alt="img"></a>
-           <a href="https://www.facebook.com/singhshubhamgkp98"><img src="./image/facebook.svg" alt="img"></a>
+           <a href="https://github.com/singh123shubham"><img src="./image/GitHub.svg" class="icon" alt="img"></a>
+           <a href="https://www.linkedin.com/in/shubham-singh-718b8514a/"><img src="./image/LinkedIn.svg" class="icon" alt="img"></a>
+           <a href="https://www.instagram.com/singhshubhamgkp98/?hl=en"><img src="./image/Instagram.svg" class="icon" alt="img"></a>
+           <a href="https://www.facebook.com/singhshubhamgkp98"><img src="./image/facebook.svg" class="icon" alt="img"></a>
        </div>
        <div >
            Copyrright 2021 ©️ SHUBHAM-SINGH-PORTFOLIO. All Right Reserved.
